--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,6 +3,5 @@
   height: 100vh;
 }
 .home {
-  height: 100vh;
   background: #202021;
 }
